<resources>
    <string name="app_name">MySpence</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction_title">Recent Transactions</string>
    <string name="add_bill">Add Bill</string>
    <string name="transactionDate">transaction date</string>
    <string name="Set_Budget">Set Budget</string>
    <string name="current_budget">Current Budget: Rs.</string>
    <string name="total_spent">Total Spent: Rs.</string>
    <string name="enter_budget">Enter budget amount</string>
    <string name="monthly_budget">Set Monthly Budget</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="percentage">Percentage</string>
    <string name="spending_analysis">Spending Analysis</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_text">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="register_text">Don\'t have an account? Register</string>
    <string name="my_spence">MySpence</string>
    <string name="username">Username</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="feedback_submit">Submit Feedback</string>
    <string name="feedback_hint">Enter your feedback</string>
</resources>