<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_gravity="center_vertical"> <!-- Aligns the content vertically in the screen -->

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:text="@string/register"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextEmail"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:background="@drawable/edit_text_bg"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextPassword"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_bg"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_bg"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnRegister"
        android:text="@string/register"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/teal_500"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textLogin"
        android:text="@string/login_text"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
    </ScrollView>
