<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <TextView
        android:text="@string/login"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextEmail"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:background="@drawable/edit_text_bg"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextPassword"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:background="@drawable/edit_text_bg"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:backgroundTint="@color/teal_500"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textRegister"
        android:text="@string/register_text"
        android:textSize="14sp"
        android:textColor="@color/teal_700"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
