<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:elevation="4dp"
    android:radius="12dp"
    android:padding="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/slate_600">

        <TextView
            android:id="@+id/titleTextView"
            android:text="@string/transaction_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deleteTransactionButton"
            app:layout_constraintHorizontal_bias="0" />

        <TextView
            android:id="@+id/categoryTextView"
            android:text="@string/category"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/titleTextView"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/amountTextView"
            android:text="@string/price"
            android:textSize="20sp"
            android:textColor="@android:color/holo_green_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/titleTextView"
            app:layout_constraintTop_toBottomOf="@+id/categoryTextView"
            android:layout_marginTop="6dp" />
        <TextView
            android:id="@+id/dateTextView"
            android:text="@string/transactionDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/titleTextView"
            app:layout_constraintTop_toBottomOf="@+id/amountTextView"
            android:layout_marginTop="6dp"/>

        <ImageButton
            android:id="@+id/deleteTransactionButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/round_corner_button"
            android:padding="8dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/icon_delete"
            android:scaleType="centerInside"
            android:contentDescription="@string/delete_transaction"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
