<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textUsername"
                android:text="@string/username"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginBottom="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editTextFeedback"
                android:hint="@string/feedback_hint"
                android:textColorHint="@color/black"
                android:textColorHighlight="@color/black"
                android:minLines="3"
                android:maxLines="5"
                android:gravity="top"
                android:background="@drawable/edit_text_bg"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:numStars="5"
                android:stepSize="1.0"
                android:rating="0" />

            <Button
                android:id="@+id/btnSubmitFeedback"
                android:text="@string/feedback_submit"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/teal_500"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnLogout"
                android:text="@string/logout"
                android:layout_marginTop="24dp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:backgroundTint="@color/teal_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </FrameLayout>
</ScrollView>
